--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,7 +4,8 @@
 @import "{{ site.theme }}";
 
 .main-content blockquote{
-    background-color: #DCDCDC;
+    background-color: #edf2f7;
+    padding-top: 5px;
 }
 
 div.button-box {
