Bold all code blocks

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -7,6 +7,10 @@
     border-left: 0.4rem solid #dce6f0;
 }
 
+.main-content code {
+    font-weight: bold;
+}
+
 div.button-box {
     text-align: center;
     width: 100%;
